--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=product-service
+
+server.port=8081
+
+spring.datasource.url=jdbc:mysql://localhost:3306/db_spring_cloud
+spring.datasource.username=root
+spring.datasource.password=sasa1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
