--- a/pom.xml
+++ b/pom.xml
@@ -6,26 +6,22 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.4.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>com.exe.spring_cloud.msvc</groupId>
     <artifactId>spring-cloud-msvc</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
+
+
     <name>spring-cloud-msvc</name>
     <description>spring-cloud-msvc</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
-    <developers>
-        <developer/>
-    </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>items-service</module>
+        <module>product-service</module>
+    </modules>
+
     <properties>
         <java.version>21</java.version>
     </properties>
