Prueba de LoadBalancer

--- a/items-service/src/main/resources/application.properties
+++ b/items-service/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=items-service
 
 server.port=8002
+
+spring.cloud.discovery.client.simple.instances.product-service[0].uri=http://localhost:8001
+spring.cloud.discovery.client.simple.instances.product-service[1].uri=http://localhost:9001
+
+
