--- a/items-service/src/main/resources/application.properties
+++ b/items-service/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.application.name=items-service
 
 server.port=8002
 
-spring.cloud.discovery.client.simple.instances.product-service[0].uri=http://localhost:8001
-spring.cloud.discovery.client.simple.instances.product-service[1].uri=http://localhost:9001
-
-
+#eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
