--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <modules>
         <module>items-service</module>
         <module>product-service</module>
+        <module>discovery-server</module>
     </modules>
 
     <properties>
