--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -2,8 +2,14 @@ spring.application.name=product-service
 
 server.port=8001
 
+#MySql
 spring.datasource.url=jdbc:mysql://localhost:3306/db_spring_cloud
 spring.datasource.username=root
 spring.datasource.password=sasa1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+#eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
