Creación de la api gateway

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>items-service</module>
         <module>product-service</module>
         <module>discovery-server</module>
+        <module>gateway-server</module>
     </modules>
 
     <properties>
