--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=product-service
+server.port=${PORT:0}
 
-server.port=8001
+
 
 #MySql
 spring.datasource.url=jdbc:mysql://localhost:3306/db_spring_cloud
