--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -6,11 +6,26 @@ spring:
           uri: lb://product-service # lb=Load balance en product-service
           predicates:
             - Path=/api/product/** # /api/product prefix
+            #- Header=token, 12345
+            #- Method=GET, POST
+            #- Query=color, verde
+            #- Cookie=color, azul
           filters:
             - StripPrefix=2 # Elimina el segmento /api/product prefix
+            - name: SampleCookie
+              args:
+                message: Hola este es mi mensaje personalizado para productos! 
+                name: user
+                value: Exe
+            - SetResponseHeader=Content-Type, application/json
         - id: items-service
           uri: lb://items-service
           predicates:
             - Path=/api/items/**
           filters:
             - StripPrefix=2
+            - AddRequestHeader=token-request, sdfasa
+            - AddResponseHeader=token-response, asdfas
+            - AddRequestParameter=name, Exe
+            - SetResponseHeader=Content-Type, application/json
+
