--- a/items-service/src/main/resources/application.yml
+++ b/items-service/src/main/resources/application.yml
@@ -6,7 +6,16 @@ resilience4j:
             failure-rate-threshold: 50
             wait-duration-in-open-state: 20s
             permitted-number-of-calls-in-half-open-state: 4
+            slow-call-duration-threshold: 3s
+            slow-call-rate-threshold: 50
     instances:
       items:
         baseConfig: default
+  timelimiter:
+    configs:
+        default:
+            timeout-duration: 4s
+    instances:
+        items:
+            baseConfig: default
 
