--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>product-service</module>
         <module>discovery-server</module>
         <module>gateway-server</module>
+        <module>config-server</module>
     </modules>
 
     <properties>
