--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -2,4 +2,7 @@ spring.application.name=config-server
 
 server.port=8888
 
-spring.cloud.config.server.git.uri=file:///F:/DISCO SSD PROGRAMACION/config
+spring.cloud.config.server.git.uri=https://github.com/ExeCarrizo33/configs-repository.git
+
+
+
