--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>gateway-server</module>
         <module>config-server</module>
         <module>libs-commons-service</module>
+        <module>users-service</module>
     </modules>
 
     <properties>
