--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <modules>
         <module>items-service</module>
-        <module>product-service</module>
+        <module>products-service</module>
         <module>discovery-server</module>
         <module>gateway-server</module>
         <module>config-server</module>
