--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -27,6 +27,13 @@ spring:
   cloud:
     gateway:
       routes:
+        - id: oauth-service
+          uri: lb://oauth-service # lb=Balanceo de carga en oauth-service
+          predicates:
+                - Path=/api/security/** # Prefijo /api/oauth
+          filters:
+                - StripPrefix=2 # Elimina el segmento /api/oauth del prefijo
+                - SetResponseHeader=Content-Type, application/json # Establece el encabezado de respuesta Content-Type
         - id: users-service
           uri: lb://users-service # lb=Balanceo de carga en users-service
           predicates:
