--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>config-server</module>
         <module>libs-commons-service</module>
         <module>users-service</module>
+        <module>oauth-service</module>
     </modules>
 
     <properties>
