--- a/oauth-service/pom.xml
+++ b/oauth-service/pom.xml
@@ -12,19 +12,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>oauth-service</name>
     <description>oauth-service</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
-    <developers>
-        <developer/>
-    </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
+
     <properties>
         <java.version>21</java.version>
         <spring-cloud.version>2024.0.1</spring-cloud.version>
@@ -81,6 +69,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.exe.spring_cloud.msvc</groupId>
+            <artifactId>libs-commons-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
