--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -1,26 +1,26 @@
-# Configuración de Resilience4j
-resilience4j:
-  # Configuración de Circuit Breaker
-  circuitbreaker:
-    configs:
-      default:
-        sliding-window-size: 6 # Tamaño de la ventana deslizante
-        failure-rate-threshold: 50 # Umbral de tasa de fallos
-        wait-duration-in-open-state: 20s # Duración de espera en estado abierto
-        permitted-number-of-calls-in-half-open-state: 4 # Número de llamadas permitidas en estado medio abierto
-        slow-call-duration-threshold: 3s # Umbral de duración de llamada lenta
-        slow-call-rate-threshold: 50 # Umbral de tasa de llamadas lentas
-    instances:
-      products:
-        baseConfig: default # Configuración base para el circuito de productos
-  # Configuración de Time Limiter
-  timelimiter:
-    configs:
-      default:
-        timeout-duration: 4s # Duración del tiempo de espera
-    instances:
-      products:
-        baseConfig: default # Configuración base para el limitador de tiempo de productos
+## Configuración de Resilience4j
+#resilience4j:
+#  # Configuración de Circuit Breaker
+#  circuitbreaker:
+#    configs:
+#      default:
+#        sliding-window-size: 6 # Tamaño de la ventana deslizante
+#        failure-rate-threshold: 50 # Umbral de tasa de fallos
+#        wait-duration-in-open-state: 20s # Duración de espera en estado abierto
+#        permitted-number-of-calls-in-half-open-state: 4 # Número de llamadas permitidas en estado medio abierto
+#        slow-call-duration-threshold: 3s # Umbral de duración de llamada lenta
+#        slow-call-rate-threshold: 50 # Umbral de tasa de llamadas lentas
+#    instances:
+#      products:
+#        baseConfig: default # Configuración base para el circuito de productos
+#  # Configuración de Time Limiter
+#  timelimiter:
+#    configs:
+#      default:
+#        timeout-duration: 4s # Duración del tiempo de espera
+#    instances:
+#      products:
+#        baseConfig: default # Configuración base para el limitador de tiempo de productos
 
 # Configuración de Spring Cloud Gateway
 spring:
@@ -46,7 +46,8 @@ spring:
             issuer-uri: http://127.0.0.1:9100 # URI del emisor del JWT
   cloud:
     gateway:
-      routes:
+      mvc:
+        routes:
         - id: oauth-service
           uri: lb://oauth-service # lb=Balanceo de carga en oauth-service
           predicates:
@@ -70,18 +71,18 @@ spring:
             #- Query=color, verde #  Predicado de consulta
             #- Cookie=color, azul #  Predicado de cookie
           filters:
-              - name: CircuitBreaker
-                args:
-                  name: products # Nombre del circuito
-                  statusCodes: 500
-                  fallbackUri: forward:/api/items/5 # Ruta de reenvío
+#              - name: CircuitBreaker
+#                args:
+#                  name: products # Nombre del circuito
+#                  statusCodes: 500
+#                  fallbackUri: forward:/api/items/5 # Ruta de reenvío
               - StripPrefix=2 # Elimina el segmento /api/product del prefijo
-              - name: SampleCookie
-                args:
-                  message: Hola este es mi mensaje personalizado para productos! # Mensaje personalizado para productos
-                  name: user # Nombre del cookie
-                  value: Exe # Valor del cookie
-              - SetResponseHeader=Content-Type, application/json # Establece el encabezado de respuesta Content-Type
+##              - name: SampleCookie
+##                args:
+##                  message: Hola este es mi mensaje personalizado para productos! # Mensaje personalizado para productos
+##                  name: user # Nombre del cookie
+##                  value: Exe # Valor del cookie
+#              - SetResponseHeader=Content-Type, application/json # Establece el encabezado de respuesta Content-Type
         - id: items-service
           uri: lb://items-service # Balanceo de carga en items-service
           predicates:
