--- a/gateway-server/src/main/resources/application.properties
+++ b/gateway-server/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=gateway-server
 server.port=8090
 #eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+management.tracing.sampling.probability=1.0
