--- a/items-service/src/main/resources/application.properties
+++ b/items-service/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8002
 #eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+management.tracing.sampling.probability=1.0
