--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=config-server
 server.port=8888
 
 spring.cloud.config.server.git.uri=https://github.com/ExeCarrizo33/configs-repository.git
+spring.cloud.config.server.git.default-label=master
 
 
 
