--- a/libs-commons-service/pom.xml
+++ b/libs-commons-service/pom.xml
@@ -42,6 +42,18 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <!-- Ignora por completo el empaquetado como Spring Boot en este módulo -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
