Agregar configuración de Eureka, Zipkin y Spring Cloud Config en archivos de propiedades; actualizar Dockerfile y eliminar variable no utilizada en ItemController

--- a/items-service/src/main/resources/application.properties
+++ b/items-service/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.application.name=items-service
 server.port=8005
-#eureka
+# Eureka Configuración
 eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
-
+# Zipkin Tracing
 management.tracing.sampling.probability=1.0
 management.zipkin.tracing.endpoint=http://zipkin-server:9411/api/v2/spans
+# Spring Cloud Config
+spring.config.import=optional:configserver:http://config-server:8888
+spring.profiles.active=dev
+# Actuator endpoints
+management.endpoints.web.exposure.include=*
