--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -10,5 +10,7 @@ spring.jpa.show-sql=true
 #eureka
 eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+management.zipkin.tracing.endpoint=http://zipkin-server:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
 
 
