--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -1,7 +1,9 @@
 FROM amazoncorretto:21-alpine-jdk
 
+WORKDIR /app
+
+COPY ./target/config-server-0.0.1-SNAPSHOT.jar config-server.jar
+
 EXPOSE 8888
-ADD ./target/config-server-0.0.1-SNAPSHOT.jar /app/config-server.jar
 
-ENTRYPOINT ["java", "-jar", "/app/config-server.jar"]
-
+ENTRYPOINT ["java", "-jar", "config-server.jar"]
