--- a/items-service/src/main/resources/bootstrap.properties
+++ b/items-service/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
 spring.application.name=items-service
-spring.cloud.config.uri=http://config-server:8888
 spring.profiles.active=dev
+spring.config.import=optional:configserver:http://config-server:8888
 management.endpoints.web.exposure.include=*
