--- a/oauth-service/src/main/resources/application.properties
+++ b/oauth-service/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=oauth-service
 server.port=9100
 eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
-
+management.tracing.exporter=zipkin
+management.zipkin.tracing.endpoint=http://zipkin-server:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
+spring.zipkin.base-url=http://zipkin-server:9411
+
