--- a/gateway-server/src/main/resources/application.properties
+++ b/gateway-server/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.application.name=gateway-server
 server.port=8090
 #eureka
 eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
-
-management.tracing.sampling.probability=1.0
+management.tracing.exporter=zipkin
 management.zipkin.tracing.endpoint=http://zipkin-server:9411/api/v2/spans
+management.tracing.sampling.probability=1.0
+spring.zipkin.base-url=http://zipkin-server:9411
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+
